--- a/app/views/project/report/rag/rag-examples.html
+++ b/app/views/project/report/rag/rag-examples.html
@@ -17,45 +17,103 @@
 
       <h2 class="govuk-heading-m">Green</h2>
 
-        <p>No rising costs, no slippage, less than 30% expenditure profiled in final year, no use of financial flexibility.</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        <li>No rising costs</li>
+        <li>no slippage</li>
+        <li>Less than 30% expenditure profiled in final year</li>
+        <li>No use of financial flexibility</li>
+      </ul>
 
       <h2 class="govuk-heading-m">Amber/Green</h2>
 
-        <p>Project progressing but with minor issues, issues are within control and there is a mitigation plan in place, there is no additional support required.</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        <li>Project progressing but with minor issues</li>
+        <li>Issues are within control and there is a mitigation plan in place</li>
+        <li>The appropriate RIBA stage has minor slippage but there is mitigation plan in place</li>
+        <li>There is no additional support required</li>
+      </ul>
 
       <h2 class="govuk-heading-m">Amber</h2>
 
-        <p>Cost increases of 10% to 20% which are manageable, a funding gap exists but a source has been identified (although not secured), there is slippage of 20% to 30% between financial years, 40% to 50% of expenditure is profiled in the final year, the use of flexibility is required but below the threshold.</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        <li>Cost increases of 10% to 20% which are manageable</li>
+        <li>A funding gap exists - a source has been identified but not secured</li>
+        <li>Less than 30% expenditure profiled in final year</li>
+        <li>There is slippage of 20% to 30% between financial years</li>
+        <li>40% to 50% of expenditure is profiled in the final year</li>
+        <li>The use of flexibility is required but below the threshold</li>
+      </ul>
 
       <h2 class="govuk-heading-m">Amber/Red</h2>
 
-        <p>No rising costs, no slippage, less than 30% expenditure profiled in final year, no use of financial flexibility.</p>
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        <li>The project has stalled for any reason</li>
+        <li>Value engineering is required or in progress due to significant increases or over-runs</li>
+        <li>Significant additional match funding is required for delivery</li>
+        <li>Potential match funding source has been identified but not secured</li>
+      </ul>
 
         <h2 class="govuk-heading-m">Red</h2>
 
-        <p>No rising costs, no slippage, less than 30% expenditure profiled in final year, no use of financial flexibility.</p>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+          <li>Major cost increases over 30% which is unmanageable and there is no plan to resolve the problem</li>
+          <li>Major slippage over 40% between financial years</li>
+          <li>Over 60% of expenditure is profiled in the final year</li>
+          <li>Major movement of funding planned</li>
+          <li>Major additional match funding is required to facilitate delivery</li>
+          <li>Match funding source not identified</li>
+          <li>Call in required</li>
+        </ul>
 
     <h1 class="govuk-heading-l">Delivery risk</h1>
 
         <h2 class="govuk-heading-m">Green</h2>
 
-        <p>No rising costs, no slippage, less than 30% expenditure profiled in final year, no use of financial flexibility.</p>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+          <li>Planning is in place</li>
+          <li>Main contract procurement process is complete</li>
+          <li>Delivery milestones on target</li>
+          <li>Appropriate RIBA stage on track</li>
+          <li>Project completed</li>
+        </ul>
 
         <h2 class="govuk-heading-m">Amber/Green</h2>
 
-        <p>No rising costs, no slippage, less than 30% expenditure profiled in final year, no use of financial flexibility.</p>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+          <li>Project progressing but with minor issues</li>
+          <li>Issues are within control and there is a mitigation plan in place</li>
+          <li>The appropriate RIBA stage has minor slippage but there is mitigation plan in place</li>
+          <li>There is no additional support required</li>
+        </ul>
 
         <h2 class="govuk-heading-m">Amber</h2>
 
-        <p>No rising costs, no slippage, less than 30% expenditure profiled in final year, no use of financial flexibility.</p>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+          <li>The project is progressing but delayed</li>
+          <li>The issues identified are within control but there is no plan in place to deal with the issue</li>
+          <li>Value engineering is required or in progress</li>
+          <li>Appropriate RIBA stage has slipped considerably</li>
+          <li>Additional support is required</li>
+        </ul>
 
         <h2 class="govuk-heading-m">Amber/Red</h2>
 
-        <p>No rising costs, no slippage, less than 30% expenditure profiled in final year, no use of financial flexibility.</p>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+          <li>The project has stalled</li>
+          <li>Value engineering is required or in progress and likely to result in a new planning application and delayed delivery timelines</li>
+          <li>Major RIBA stage slippage</li>
+          <li>Major additional support required</li>
+        </ul>
 
         <h2 class="govuk-heading-m">Red</h2>
 
-        <p>No rising costs, no slippage, less than 30% expenditure profiled in final year, no use of financial flexibility.</p>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+          <li>Project stalled</li>
+          <li>Issues out of control</li>
+          <li>Major support required</li>
+          <li>Major RIBA stage slippage</li>
+          <li>No plan in place</li>
+        </ul>
 
 
 
